# BinFailGraph

./: .gitignore  README.md  environment.yml  pyproject.toml
notebooks/: 01_logistic_regression.ipynb  02_random_forest.ipynb  03_xgboost.ipynb
scripts/: create_notebooks.py
src/binfailgraph/: __init__.py  datasets.py  examples.py  features.py  graph.py  io.py  labels.py  modeling.py
tests/: test_smoke.py
tests/data/Sim-10G/: contigs.fasta.hmmout  ground_truth.csv  initial_contig_bins.csv
