[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "binfailgraph"
version = "0.1.0"
description = "Graph-based failure prediction for metagenomic binning"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "agtools>=1.1.0",
    "biopython>=1.83",
    "networkx>=3.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "igraph>=0.11",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
notebooks = [
    "jupyterlab>=4.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "xgboost>=2.0",
    "shap>=0.45",
]

[tool.setuptools.packages.find]
where = ["src"]
